--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
         "flatcurry-annotated": ">= 1.0.0",
         "showflatcurry": ">= 0.0.1"
     },
+    "compilerCompatibility": {
+        "pakcs": ">= 1.14.0, < 2.0.0",
+        "kics2": ">= 0.5.0, < 2.0.0"
+    },
     "configModule": "PackageConfig",
     "executable": {
         "name": "curry-ctopt",
