--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "license": "BSD-3-Clause",
     "licenseFile": "LICENSE",
     "dependencies": {
+        "flatcurry"          : ">= 1.0.0",
         "flatcurry-annotated": ">= 1.0.0",
         "showflatcurry": ">= 0.0.1"
     },
