Contract prover adapted to type classes and functionality changed so that it works without CurryPP

--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "name": "contract-prover",
-    "version": "0.0.1",
+    "version": "1.0.0",
     "author": "Michael Hanus <mh@informatik.uni-kiel.de>",
-    "synopsis": "A tool to optimize contracts in FlatCurry programs by proving contracts",
+    "synopsis": "A tool to verify contracts in FlatCurry programs",
     "category": [ "Optimization", "Verification" ],
     "license": "BSD-3-Clause",
     "licenseFile": "LICENSE",
     "dependencies": {
+        "contracts"          : ">= 0.0.1",
+        "currypath"          : ">= 0.0.1",
+        "finite-map"         : ">= 0.0.1",
         "flatcurry"          : ">= 1.0.0",
         "flatcurry-annotated": ">= 1.0.0",
-        "showflatcurry": ">= 0.0.1"
+        "showflatcurry"      : ">= 0.0.1",
+        "wl-pprint"          : ">= 0.0.1"
     },
     "compilerCompatibility": {
-        "pakcs": ">= 1.14.0, < 2.0.0",
-        "kics2": ">= 0.5.0, < 2.0.0"
+        "pakcs": ">= 2.0.0, < 3.0.0",
+        "kics2": ">= 2.0.0, < 3.0.0"
     },
     "configModule": "PackageConfig",
     "executable": {
-        "name": "curry-ctopt",
+        "name": "curry-contracts",
         "main": "ContractProver"
     },
     "testsuite": {
