Update source location

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "options": "-v"
     },
     "source": {
-        "git": "https://git.ps.informatik.uni-kiel.de/curry-packages/contract-prover.git",
+        "git": "https://github.com/curry-packages/contract-prover.git",
         "tag": "$version"
     }
 }
