--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "currypath"               : ">= 3.0.0, < 4.0.0",
         "directory"               : ">= 3.0.0, < 4.0.0",
         "filepath"                : ">= 3.0.0, < 4.0.0",
-        "flatcurry"               : ">= 3.0.0, < 4.0.0",
+        "flatcurry"               : ">= 3.0.0, < 5.0.0",
+        "flatcurry-smt"           : "^ 1.0.0",
         "flatcurry-annotated"     : ">= 3.3.0, < 4.0.0",
         "flatcurry-type-annotated": ">= 3.3.0, < 4.0.0",
         "io-extra"                : ">= 3.0.0, < 4.0.0",
